# sandbox

./: CMakeLists.txt
core/: CMakeLists.txt
core/include/core/: crc32.hpp
core/tests/: crc32.cpp
gpt/: .gitignore  CMakeLists.txt  Makefile
gpt/data/: gpt.conf  gpt.json
gpt/include/gpt/: gpt.hpp
gpt/source/: gpt.cpp
gpt/tools/: make-gpt.cpp
json/: CMakeLists.txt
json/include/json/: .json.hpp.swp  json.hpp
json/source/: json.cpp
json/tests/: json_test.cpp
