add_library (gpt source/gpt.cpp)
target_include_directories (gpt PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
set_property(TARGET gpt PROPERTY CXX_STANDARD 23)
target_compile_options(gpt PRIVATE -Wall -Wextra -Wpedantic -Werror)
target_link_libraries (gpt LINK_PUBLIC core)
target_link_libraries (gpt LINK_PUBLIC json)

add_executable (make-gpt tools/make-gpt.cpp)
target_link_libraries (make-gpt LINK_PUBLIC core)
target_link_libraries (make-gpt LINK_PUBLIC gpt)
target_link_libraries (make-gpt LINK_PUBLIC json)
set_property(TARGET make-gpt PROPERTY CXX_STANDARD 23)
target_compile_options(make-gpt PRIVATE -Wall -Wextra -Wpedantic -Werror)
